--- a/src/assets/scss/_modules/variables.scss
+++ b/src/assets/scss/_modules/variables.scss
@@ -595,7 +595,7 @@ $header-inner-padding-x:				2rem !default;
 $header-inner-padding-y:				0 !default;
 
 /* logo */
-$header-logo-border-bottom:				rgba(darken($primary-700, 10%), (30/100)) !default;
+$header-logo-border-bottom:				rgba(darken($primary-700, 10%), calc(30 / 100)) !default;
 $header-logo-width:						28px !default; 										  /* try not to go beywond the width of $main_nav_width value */
 $header-logo-height:					28px !default; 										  /* you may need to change this depending on your logo design */
 $header-logo-text-align:				center; 											  /* adjust this as you see fit : left, right, center */
