--- a/src/assets/scss/_themes/_modules/_nav.scss
+++ b/src/assets/scss/_themes/_modules/_nav.scss
@@ -64,7 +64,7 @@
 			}
 
 			&:hover {
-				@include text-contrast(rgba(lighten($nav-base-color, 1%), (80/100)));
+				@include text-contrast(rgba(lighten($nav-base-color, 1%), calc(80/100)));
 				background-color: rgba($black, 0.1);
 
 				.badge {
@@ -77,14 +77,14 @@
 				}
 
 				> .badge {
-					box-shadow: 0 0 0 1px rgba(lighten($nav-base-color, 1%), (80/100));
-					border: 1px solid rgba(lighten($nav-base-color, 1%), (80/100));
+					box-shadow: 0 0 0 1px rgba(lighten($nav-base-color, 1%), calc(80/100));
+					border: 1px solid rgba(lighten($nav-base-color, 1%), calc(80/100));
 				}
 
 			}
 
 			&:focus {
-				@include text-contrast( rgba(darken($nav-base-color, 5% ), (50/100)) );
+				@include text-contrast( rgba(darken($nav-base-color, 5% ), calc(50/100)) );
 
 				.badge {
 					color: $nav-badge-color;
@@ -116,8 +116,8 @@
 					}
 
 					&:hover {
-						@include text-contrast(rgba(($black), (10/100)));
-						background-color: rgba(($black), (10/100));
+						@include text-contrast(rgba(($black), calc(10/100)));
+						background-color: rgba(($black), calc(10/100));
 
 						> .nav-link-text {
 							>[class*='fa-'],
@@ -131,13 +131,13 @@
 				&.active {
 
 					> a {
-						@include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)));
+						@include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)));
 						background-color:transparent;
 
 						> .nav-link-text {
 							>[class*='fa-'],
 							>.#{$cust-icon-prefix} {
-							    @include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)));
+							    @include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)));
 							}
 						}
 
@@ -167,7 +167,7 @@
 							color: darken($nav-link-color, 7%);
 
 							&:hover {
-								@include text-contrast( rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)) )
+								@include text-contrast( rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)) )
 							}
 
 							> .badge {
