--- a/src/assets/scss/_mixins/mixins.scss
+++ b/src/assets/scss/_mixins/mixins.scss
@@ -314,10 +314,10 @@ Color brightness is determined by the following formula:
 ------------------------*/
 
 @mixin text-contrast($n:#333) {
-  $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
-  $light-color: round((red(#ffffff) * 299) + (green(#ffffff) * 587) + (blue(#ffffff) * 114) / 1000);
+  $color-brightness: round((red($n) * 299) + (green($n) * 587) + calc((blue($n) * 114) / 1000));
+  $light-color: round((red(#ffffff) * 299) + (green(#ffffff) * 587) + calc((blue($n) * 114) / 1000));
 
-  @if abs($color-brightness) < ($light-color/1.70){
+  @if abs($color-brightness) < calc($light-color / 1.7){
     color: rgba(255,255,255,1);
   }
 
@@ -332,10 +332,10 @@ Color brightness is determined by the following formula:
 ------------------------*/
 
 @function contrast($n:#333) {
-  $color-brightness: round((red($n) * 299) + (green($n) * 587) + (blue($n) * 114) / 1000);
-  $light-color: round((red(#ffffff) * 299) + (green(#ffffff) * 587) + (blue(#ffffff) * 114) / 1000);
+  $color-brightness: round((red($n) * 299) + (green($n) * 587) + calc((blue($n) * 114) / 1000));
+  $light-color: round((red(#ffffff) * 299) + (green(#ffffff) * 587) + calc((blue(#ffffff) * 114) / 1000));
 
-  @if abs($color-brightness) < ($light-color/1.70){
+  @if abs($color-brightness) < calc($light-color/1.70){
     @return #ffffff;
   }
 
