--- a/src/assets/scss/_modules/_nav.scss
+++ b/src/assets/scss/_modules/_nav.scss
@@ -200,7 +200,7 @@
 			}
 
 			&:hover {
-				@include text-contrast(rgba(lighten($nav-base-color, 1%), (80/100)));
+				@include text-contrast(rgba(lighten($nav-base-color, 1%), calc(80/100)));
 				text-decoration: none;
 				background-color: rgba($black, 0.1);
 
@@ -214,14 +214,14 @@
 				}
 
 				> .badge {
-					box-shadow: 0 0 0 1px rgba(lighten($nav-base-color, 1%), (80/100));
-					border: 1px solid rgba(lighten($nav-base-color, 1%), (80/100));
+					box-shadow: 0 0 0 1px rgba(lighten($nav-base-color, 1%), calc(80/100));
+					border: 1px solid rgba(lighten($nav-base-color, 1%), calc(80/100));
 				}
 
 			}
 
 			&:focus {
-				@include text-contrast( rgba(darken($nav-base-color, 5% ), (50/100)) );
+				@include text-contrast( rgba(darken($nav-base-color, 5% ), calc(50/100)) );
 
 				.badge {
 					color: $nav-badge-color;
@@ -267,8 +267,8 @@
 					}
 
 					&:hover {
-						@include text-contrast(rgba(($black), (10/100)));
-						background-color: rgba(($black), (10/100));
+						@include text-contrast(rgba(($black), calc(10/100)));
+						background-color: rgba(($black), calc(10/100));
 
 						> .nav-link-text {
 							>[class*='fa-'],
@@ -282,7 +282,7 @@
 				&.active {
 
 					> a {
-						@include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)));
+						@include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)));
 
 						background-color: transparent;
 						box-shadow:none;
@@ -292,7 +292,7 @@
 						> .nav-link-text {
 							>[class*='fa-'],
 							>.#{$cust-icon-prefix} {
-							    @include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)));
+							    @include text-contrast(rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)));
 							}
 						}
 
@@ -331,18 +331,18 @@
 
 							.dl-ref {
 								margin-left: 0;
-								margin-right: $nav-icon-margin-right / 1.2;
+								margin-right: calc($nav-icon-margin-right / 1.2);
 							}
 
 							>[class*='fa-'],
 							>.#{$cust-icon-prefix} {
 								margin-left: 0;
-								margin-right: $nav-icon-margin-right / 1.2;
+								margin-right: calc($nav-icon-margin-right / 1.2);
 							}
 
 							&:hover {
 
-								@include text-contrast( rgba(lighten(darken($nav-base-color, 11%), 5%), (45/100)) )
+								@include text-contrast( rgba(lighten(darken($nav-base-color, 11%), 5%), calc(45/100)) )
 							}
 
 							> .badge {
