--- a/src/assets/scss/_modules/_page-components-cards.scss
+++ b/src/assets/scss/_modules/_page-components-cards.scss
@@ -7,12 +7,12 @@
 		font-weight: 400;
 		font-size: 85%;
 	}
-} 
+}
 
 /* remove extra margin in card child items */
 .card,
 .card-group {
-	box-shadow: 0px 0px 13px 0px rgba(darken($primary-800, 10%), (8/100));
+	box-shadow: 0px 0px 13px 0px rgba(darken($primary-800, 10%), calc(8/100));
 
 	> :last-child {
 		margin-bottom: 0px;
@@ -39,7 +39,7 @@
 
 /* card title */
 .card-title {
-	font-size: $h5-font-size;	
+	font-size: $h5-font-size;
 }
 
 .card-header .card-title {
