--- a/src/assets/scss/_modules/_page-components-panels.scss
+++ b/src/assets/scss/_modules/_page-components-panels.scss
@@ -9,7 +9,7 @@
 
 	position: relative;
 	background-color: $white;
-	box-shadow: 0px 0px 13px 0px rgba(darken($primary-800, 15%), (8/100));
+	box-shadow: 0px 0px 13px 0px rgba(darken($primary-800, 15%), calc(8/100));
 
 	margin-bottom: $grid-gutter-width;
 	border-radius: $border-radius;
@@ -82,7 +82,7 @@
 		.panel-hdr {
 			height: $header-height;
 			border-radius: 0;
-			box-shadow: 0 0.125rem 0.125rem -0.0625rem  rgba(darken($primary-800, 10%), (10/100));
+			box-shadow: 0 0.125rem 0.125rem -0.0625rem  rgba(darken($primary-800, 10%), calc(10/100));
 
 			/* make panel header bigger */
 			h2 {
@@ -220,7 +220,7 @@
 		font-weight: 500;
 
 		&:not(:only-child) {
-			margin-right: $panel-spacer-x / 1.5;
+			margin-right: calc($panel-spacer-x / 1.5);
 		}
 
 		> [class*='fw-'] {
